Add support for CONST statements in BASIC
* Add support for CONST statements in BASIC

This commit adds support for CONST statements in BASIC. It also improves
optimization of expressions, because the AST optimizer is used to calculate
the value of constant expressions. The commit adds AST optimization of
bitwise and relational expressions, as well as negate and modulo expressions.

* Rewrite example programs in a consistent style